--- a/2015_04_RoroSyd/slides/Code2b.html
+++ b/2015_04_RoroSyd/slides/Code2b.html
@@ -1,5 +1,5 @@
 <section>
-<div class="header">Method 4a: Itty Bitty Rails App</div>
+<div class="header">Method 5: Itty Bitty Rails App</div>
 <div class="fourby">
         <i class="fa fa-search"></i>
         <i class="fa fa-expand four-active"></i>
