--- a/2015_04_RoroSyd/slides/Code1b.html
+++ b/2015_04_RoroSyd/slides/Code1b.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">Make it a Rails app!</div>
+	<div class="h1">Make it a<br> Rails app!</div>
 	<div class="watermark">
 		<i class="fa fa-train"></i>
 	</div>
