--- a/2015_04_RoroSyd/slides/Final2.html
+++ b/2015_04_RoroSyd/slides/Final2.html
@@ -1,5 +1,5 @@
 <section>
-<div class="header">Method 8: Gyprock</div>
+<div class="header">Method 7: Cats</div>
 <div class="fourby">
         <i class="fa fa-search four-active"></i>
         <i class="fa fa-expand four-active"></i>
@@ -9,15 +9,16 @@
 <br/>
 <div class="code">
 <pre>
-//Get current window size
+<span class="comment">//Get current window size</span>
 h = document.screen.height
 w = document.screen.width
 
-//Get wallpaper image URL
+<span class="comment">//Get wallpaper image URL</span>
 pic = "wallpaper/" + [id, w, h].join("/")
 
-//Redirect to wallpaper
+<span class="comment">//Redirect to wallpaper</span>
 window.location.href = pic 
 </pre>
 </div>
+<style> .comment { color: #green }</style>
 </section>
