--- a/2015_04_RoroSyd/slides/PlaceKitten1.html
+++ b/2015_04_RoroSyd/slides/PlaceKitten1.html
@@ -6,12 +6,15 @@
         <i class="fa fa-arrows four-active"></i>
         <i class="fa fa-eyedropper four-active"></i>
 </div>
-<div class="url">
-gyprock.glasnt.com/wallpaper/{id}/{w}/{h}
-</div>
-<br/>
-<div class="image-inlay">
+<div class="url" style="font-size: 60px; margin-left: -60px;">
 
-<img src="pictures/APIVersion.png">
+<br>
+placekitten.com/{w}/{h}
+<br>
+<br>
+<br>
+</div>
+<style>.highlight  { color: #f00} </style>
+<br/>
 </div>
 </section>
