--- a/2015_04_RoroSyd/slides/steps_all.html
+++ b/2015_04_RoroSyd/slides/steps_all.html
@@ -1,10 +1,13 @@
 <section class="black four">
 
 <div class="fourby">
- 	 <i class="fa fa-search four-active"></i>
-	  <i class="fa fa-expand four-active"></i>
-	 <i class="fa fa-arrows four-active"></i>
-	<i class="fa fa-eyedropper four-active "></i>
+<i class="fa fa-search four-active"></i>
+<i class="fa fa-expand four-active"></i>
+<i class="fa fa-arrows four-active"></i>
+<i class="fa fa-eyedropper four-active "></i>
 </div>
+
+<br><br><br>
+<div class="h1">Legend --></div>
 
 </section>
