--- a/2015_04_RoroSyd/slides/Final2b.html
+++ b/2015_04_RoroSyd/slides/Final2b.html
@@ -1,5 +1,5 @@
 <section>
-<div class="header">Method 8: Gyprock</div>
+<div class="header">Method 7: Cats</div>
 <div class="fourby">
         <i class="fa fa-search"></i>
         <i class="fa fa-expand four-active"></i>
@@ -9,7 +9,7 @@
 <br/>
 <div class="code">
 <pre>
-//Get current window size
+<span class="comment">//Get current window size</span>
 h = document.screen.height
 w = document.screen.width
 </pre>
