Titlize: "How do you", font size

--- a/2015_04_RoroSyd/slides/Code1a.html
+++ b/2015_04_RoroSyd/slides/Code1a.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to make it more accessible?</div>
+	<div class="h1">How do you make it more accessible?</div>
 	<div class="watermark">
 		<i class="fa fa-users"></i>
 	</div>
