--- a/2015_04_RoroSyd/slides/Final2a.html
+++ b/2015_04_RoroSyd/slides/Final2a.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to get your screen resolution in JavaScript?</div>
+	<div class="h1">How do you get your screen resolution in JavaScript?</div>
 	<div class="watermark">
 		<i class="fa fa-expand"></i>
 	</div>
