--- a/2015_04_RoroSyd/slides/MSPaint-keyboard.html
+++ b/2015_04_RoroSyd/slides/MSPaint-keyboard.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to make a background in MSPaint less manually?</div>
+	<div class="h1">How do you make a background less manually?</div>
 	<div class="watermark">
 		<i class="fa fa-paint-brush"></i>
 	</div>
