--- a/2015_04_RoroSyd/slides/Background1.html
+++ b/2015_04_RoroSyd/slides/Background1.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to get the<br/> background<br/>fill colour?</div>
+	<div class="h1">How do you get the<br/> background<br/>fill colour?</div>
 	<div class="watermark">
 		<i class="fa fa-eyedropper"></i>
 	</div>
