--- a/2015_04_RoroSyd/slides/Gyprock5.html
+++ b/2015_04_RoroSyd/slides/Gyprock5.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to make all the desired backgrounds?</div>
+	<div class="h1">How do you make all the desired backgrounds?</div>
 	<div class="watermark">
 		<i class="fa fa-heart"></i>
 	</div>
