--- a/2015_04_RoroSyd/slides/MSPaint0.html
+++ b/2015_04_RoroSyd/slides/MSPaint0.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to make a background in Windows?</div>
+	<div class="h1">How do you make a background in Windows?</div>
 	<div class="watermark">
 		<i class="fa fa-windows"></i>
 	</div>
