--- a/2015_04_RoroSyd/slides/steps_pre.html
+++ b/2015_04_RoroSyd/slides/steps_pre.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How to make a background</div>
+	<div class="h1">How do you make a background?</div>
 	<div class="watermark">
 		<i class="fa fa-question-circle"></i>
 	</div>
