Change some of the question slides

--- a/2015_04_RoroSyd/slides/MSPaint1.html
+++ b/2015_04_RoroSyd/slides/MSPaint1.html
@@ -1,7 +1,7 @@
-<section >
-	<div class="header"> MSPaint</div>
-<div class="image-inlay">
+<section class="black four">
 
-<img src="pictures/paint2.png">
-</div>
+	<div class="h1">MSPaint</div>
+	<div class="watermark">
+		<i class="fa fa-paint-brush"></i>
+	</div>
 </section>
