--- a/2015_04_RoroSyd/slides/ImageMagick0.html
+++ b/2015_04_RoroSyd/slides/ImageMagick0.html
@@ -1,6 +1,6 @@
 <section class="black four">
 	<div class="h1">How do you make a<br/> background<br/>programmatically in Linux?</div>
 	<div class="watermark">
-		<i class="fa fa-linux"></i>
+		<i class="fa fa-question-circle"></i>
 	</div>
 </section>
