--- a/2015_04_RoroSyd/slides/MSPaint-keyboard.html
+++ b/2015_04_RoroSyd/slides/MSPaint-keyboard.html
@@ -1,6 +1,6 @@
 <section class="black four">
-	<div class="h1">How do you make a background less manually?</div>
+	<div class="h1">Keyboard shortcuts!</div>
 	<div class="watermark">
-		<i class="fa fa-paint-brush"></i>
+		<i class="fa fa-keyboard-o"></i>
 	</div>
 </section>
