--- a/2015_04_RoroSyd/slides/Code0.html
+++ b/2015_04_RoroSyd/slides/Code0.html
@@ -1,6 +1,6 @@
 <section class="black four">
-	<div class="h1">How do you make it useful?</div>
+	<div class="h1">How do you make it more accessible?</div>
 	<div class="watermark">
-		<i class="fa fa-question-circle"></i>
+		<i class="fa fa-users"></i>
 	</div>
 </section>
