Formatterings and such

--- a/2015_04_RoroSyd/slides/Background3.html
+++ b/2015_04_RoroSyd/slides/Background3.html
@@ -8,8 +8,7 @@
         </div>
 <div class="code">
 <pre>
-convert rhino.jpg histogram:histogram.gif
-
+<div class="p">~ $ convert rhino.jpg histogram:histogram.gif</div>
 
 </pre>
 <p align="center">
