--- a/2015_04_RoroSyd/slides/Background4.html
+++ b/2015_04_RoroSyd/slides/Background4.html
@@ -8,8 +8,7 @@
         </div>
 <div class="code">
 <pre>
-convert rhino.jpg -format "%c" histogram:info:
-
+<div class="p">~ $ convert rhino.jpg -format "%c" histogram:info:</div>
 
 
 	 1: (  0,  0, 26) #00001A srgb(0,0,26)
