--- a/2015_04_RoroSyd/slides/Background5.html
+++ b/2015_04_RoroSyd/slides/Background5.html
@@ -6,10 +6,9 @@
                 <i class="fa fa-arrows"></i>
                 <i class="fa fa-eyedropper four-active"></i>
         </div>
-<div class="code">
-<pre>convert rhino.jpg -colors 16 -format "%c" \
-	histogram:info:
-
+<div class="code"><pre>
+<div class="p">~ $ convert rhino.jpg -colors 16 -format "%c" \
+	histogram:info:</div>
 
       1909: (  5,  6, 35) #050623 srgb(5,6,35)
     108950: (  9, 11, 49) #090B31 srgb(9,11,49)
