--- a/2015_04_RoroSyd/slides/Background6.html
+++ b/2015_04_RoroSyd/slides/Background6.html
@@ -6,11 +6,9 @@
                 <i class="fa fa-arrows"></i>
                 <i class="fa fa-eyedropper four-active"></i>
         </div>
-<div class="code">
-<pre>
-convert rhino.jpg -colors 16 -format "%c" \
-	histogram:info: | sort -nr
-
+<div class="code"><pre>
+<div class="p">~ $ convert rhino.jpg -colors 16 -format "%c" \
+	histogram:info: | sort -nr</div>
 
     108950: (  9, 11, 49) #090B31 srgb(9,11,49)
      10439: (124,159,199) #7C9FC7 srgb(124,159,199)
