--- a/2015_04_RoroSyd/slides/ImageMagick1.html
+++ b/2015_04_RoroSyd/slides/ImageMagick1.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">ImageMagick</div>
+	<div class="h1">ImageMagick!</div>
 	<div class="watermark">
 		<i class="fa fa-magic"></i>
 	</div>
