--- a/2015_04_RoroSyd/slides/MSPaint1.html
+++ b/2015_04_RoroSyd/slides/MSPaint1.html
@@ -1,6 +1,6 @@
 <section class="black four">
 
-	<div class="h1">MSPaint</div>
+	<div class="h1">MSPaint!</div>
 	<div class="watermark">
 		<i class="fa fa-paint-brush"></i>
 	</div>
