--- a/2015_04_RoroSyd/slides/SourceImage0a.html
+++ b/2015_04_RoroSyd/slides/SourceImage0a.html
@@ -1,6 +1,6 @@
 <section class="black four">
-	<div class="h1">ImageMagick!</div>
+	<div class="h1">...</div>
 	<div class="watermark">
-		<i class="fa fa-magic"></i>
+		<i class="fa fa-server"></i>
 	</div>
 </section>
