--- a/2015_04_RoroSyd/slides/Background4b.html
+++ b/2015_04_RoroSyd/slides/Background4b.html
@@ -8,8 +8,7 @@
         </div>
 <div class="code">
 <pre>
-convert rhino.jpg -format "%c" histogram:info:
-
+<div class="p">~ $ convert rhino.jpg -format "%c" histogram:info:</div>
 
 
 	 1: (  0,  0, 26) #00001A srgb(0,0,26)
@@ -21,8 +20,8 @@ convert rhino.jpg -format "%c" histogram:info:
          1: (  0,  1, 26) #00011A srgb(0,1,26)
 	...
 
-convert rhino.jpg -format "%c" histogram:info: | wc -l
-
+<div class="p">~ $ convert rhino.jpg -format "%c" histogram:info: \
+ | wc -l</div>
 5825
 </pre>
 </section>
