--- a/2015_04_RoroSyd/slides/Background7.html
+++ b/2015_04_RoroSyd/slides/Background7.html
@@ -8,9 +8,8 @@
         </div>
 <div class="code">
 <pre>
-convert rhino.jpg -colors 16 -format "%c" \
-	histogram:info: | sort -nr | head -1
-
+<div class="p">~ $ convert rhino.jpg -colors 16 -format "%c" \
+	histogram:info: | sort -nr | head -1</div>
 
     108950: (  9, 11, 49) #090B31 srgb(9,11,49)
 </pre>
