--- a/2015_04_RoroSyd/slides/PlaceKitten0.html
+++ b/2015_04_RoroSyd/slides/PlaceKitten0.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">Cats</div>
+	<div class="h1">Cats!</div>
 	<div class="image_inlay" style="padding-left: 300px">
 		<img src="pictures/Cat_Icon.png" style="width: 400px">
 	</div>
