Holy refactor update, batman!
* Code diff highlighting
* improved progression
* Highlight important take away
* awesome favicon

--- a/2015_04_RoroSyd/slides/Final2ab.html
+++ b/2015_04_RoroSyd/slides/Final2ab.html
@@ -4,5 +4,5 @@
 		<i class="fa fa-expand"></i>
 	</div>
 
-        <div style="padding-left: 10%; padding-top: 20px;">I know right?</div>
+        <div style="padding-left: 10%; padding-top: 20px;">I know, right?</div>
 </section>
