--- a/2015_04_RoroSyd/slides/ImageMagick2.html
+++ b/2015_04_RoroSyd/slides/ImageMagick2.html
@@ -6,10 +6,9 @@
                 <i class="fa fa-arrows"></i>
                 <i class="fa fa-eyedropper"></i>
         </div>
-<div class="code">
-<pre>
- convert -resize 800x600 \
- 	rhino.jpg rhino_resize.jpg
+<div class="code"><pre><div class="p">
+~ $ convert -resize 800x600               \
+            rhino.jpg rhino_background.jpg</div>
 </pre></div>
 <div class='rhino'>
 
