--- a/2015_04_RoroSyd/slides/ManualImage0.html
+++ b/2015_04_RoroSyd/slides/ManualImage0.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">How do you get the background<br/>fill colour?</div>
+	<div class="h1">How do you make a background<br/>in Linux?</div>
 	<div class="watermark">
 		<i class="fa fa-question-circle"></i>
 	</div>
