--- a/2015_04_RoroSyd/slides/Oops3.html
+++ b/2015_04_RoroSyd/slides/Oops3.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">Top tip: <br/>Sanitize your uploads</div>
+	<div class="h1">Top tip: <br/><span style="font-size: 75%">Sanitize your uploads</span></div>
 	<div class="watermark">
 		<i class="fa fa-upload"></i>
 	</div>
