--- a/2015_04_RoroSyd/slides/Oops4b.html
+++ b/2015_04_RoroSyd/slides/Oops4b.html
@@ -3,5 +3,5 @@
 	<div class="watermark">
 		<i class="fa fa-thumbs-o-down"></i>
 	</div>
-	<div style="padding-left: 10%; padding-top: 20px;">Don't wrap your shell script directly in Ruby</div>
+	<div style="font-size: 200%; padding-left: 10%; padding-top: 20px;">Don't wrap your shell script directly in Ruby</div>
 </section>
