More updates, syntax, code highlighting

--- a/2015_04_RoroSyd/slides/Gyprock1.html
+++ b/2015_04_RoroSyd/slides/Gyprock1.html
@@ -12,16 +12,14 @@
 <br/>
 <br/>
 <div class="code"><pre>
-for i in $(ls); do for j in (
-
- 1024x768
- 1280x800
- 1366x768
- 1440x900
- 1600x900
- 1600x1050
- 1920x1080
+for i in $(ls); do for j in ( echo \
+ 1024x768  \
+ 1280x800  \
+ 1366x768  \
+ 1440x900  \ 
+ 1600x900  \
+ 1600x1050 \ 
+ 1920x1080 \ 
  2540x1440
-
 ); do ./gyprock.rb $j $i; done; done</pre></div>
 </section>
