--- a/2015_04_RoroSyd/slides/SourceImage5.html
+++ b/2015_04_RoroSyd/slides/SourceImage5.html
@@ -5,9 +5,9 @@
 
 <pre>
 ...
-https://xyz.cloudfront.net/products/<b>999</b>/768x768design_01.jpg
-https://xyz.cloudfront.net/products/<b>1000</b>/768x768design_01.jpg
-https://xyz.cloudfront.net/products/<b>1001</b>/768x768design_01.jpg
+https://xyz.cloudfront.net/products/<span class="p1">999</span>/768x768design_01.jpg
+https://xyz.cloudfront.net/products/<span class="p1">1000</span>/768x768design_01.jpg
+https://xyz.cloudfront.net/products/<span class="p1">1001</span>/768x768design_01.jpg
 ...</pre>
 
 <p align="center">
