--- a/2015_04_RoroSyd/slides/Gyprock3a.html
+++ b/2015_04_RoroSyd/slides/Gyprock3a.html
@@ -1,5 +1,5 @@
 <section>
-<div class="header">Method 6: ... all the WRONG things</div>
+<div class="header">Method 6: Pregenerate ALL the Things</div>
 <div class="fourby">
         <i class="fa fa-search four-active"></i>
         <i class="fa fa-expand four-active"></i>
@@ -8,6 +8,7 @@
 </div>
 
 <div class="image-inlay">
-<img src="pictures/1000_Cache_wrong.png" width="100%"></img>
+<img src="pictures/1000_Cache_attr.png" width="100%"></img>
 </div>
+
 </section>
