--- a/2015_04_RoroSyd/slides/ManualImage1.html
+++ b/2015_04_RoroSyd/slides/ManualImage1.html
@@ -1,5 +1,5 @@
 <section class="black four">
-	<div class="h1">Nothing that awesome,<br/>back then</div>
+	<div class="h1">....</div>
 	<div class="watermark">
 		<i class="fa fa-linux"></i>
 	</div>
