--- a/2015_04_RoroSyd/slides/PlaceKitten2.html
+++ b/2015_04_RoroSyd/slides/PlaceKitten2.html
@@ -1,7 +1,7 @@
 <section>
 <div class="header">Method 7: Cats</div>
 <div class="fourby">
-        <i class="fa fa-search"></i>
+        <i class="fa fa-search four-active"></i>
         <i class="fa fa-expand four-active"></i>
         <i class="fa fa-arrows four-active"></i>
         <i class="fa fa-eyedropper four-active"></i>
