--- a/2015_04_RoroSyd/slides/Gyprock4.html
+++ b/2015_04_RoroSyd/slides/Gyprock4.html
@@ -8,6 +8,6 @@
 </div>
 
 <div class="image-inlay">
-<img src="pictures/1000_Cache_wrong.png" width="100%"></img>
+<img src="pictures/CacheInvalid.png" width="100%"></img>
 </div>
 </section>
