--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <h1>glasnt's talks</h1>
 <br/>
 
+<h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
+<ul><li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a></li></ul>
+
 <h2>DevOps, Sydney, March 2015</h2>
 <ul><li><a href="2015_03_DevOps/HatRack.pdf">Hat Rack</a></li></ul>
 
