--- a/2015_06_DevOps/slides/TheEnd.html
+++ b/2015_06_DevOps/slides/TheEnd.html
@@ -4,11 +4,17 @@ End
 </div>
 <br>
 <br>
-Credits: <br/>
+<br>
+<br>
+Sources: <br/>
 <pre>
 https://twitter.com/auxesis/status/603454492546244608
 https://twitter.com/michaelneale/status/603469243535863808
+https://twitter.com/TheColonial/status/595211419462729729
+https://twitter.com/glasnt/status/590781912047751168
+https://twitter.com/NamTaf/status/590790154991702016
 https://www.destroyallsoftware.com/talks/wat
 https://pbs.twimg.com/media/B9B7qbVIcAAV4cp.jpg
+http://stackoverflow.com/a/1029792/124019
 </pre>
 </section>
