--- a/2015_06_DevOps/slides/js_05.html
+++ b/2015_06_DevOps/slides/js_05.html
@@ -7,8 +7,8 @@ function question() {
   return answer;
 }
 
-console(answer);     > ""
-console(question());
+console.log(answer);     > ""
+console.log(question());
 </pre>
 </div>
 </section>
