--- a/2015_06_DevOps/slides/js_08.html
+++ b/2015_06_DevOps/slides/js_08.html
@@ -7,9 +7,9 @@ function question() {
   return answer;
 }
 
-console(answer);     > ""
-console(question()); > 42
-console(answer);     > ""
+console.log(answer);     > ""
+console.log(question()); > 42
+console.log(answer);     > ""
 </pre>
 </div>
 </section>
