--- a/2015_06_DevOps/slides/check_03.html
+++ b/2015_06_DevOps/slides/check_03.html
@@ -2,7 +2,7 @@
 <div class="embiggen">
 <pre>
 cb = document
-     .getElementById("checkbox")
+     .getElementById("cb")
 cb.checked
 &gt; false
 cb.checked = "false"
