--- a/2015_06_DevOps/slides/equal_04.html
+++ b/2015_06_DevOps/slides/equal_04.html
@@ -1,10 +1,6 @@
 <section>
 <div class="embiggen">
 <pre>
-0 == false
-> true
-0 === false
-> false
-</pre>
-</div>
+0 ==  false  > true 
+0 === false  > false 
 </section>
