--- a/2015_06_DevOps/slides/equal_06.html
+++ b/2015_06_DevOps/slides/equal_06.html
@@ -1,12 +1,7 @@
 <section>
 <div class="embiggen">
 <pre>
-0 == false
-> true
-0 === false
-> false
-1 == "1"
-> true
-</pre>
-</div>
+0 ==  false  > true 
+0 === false  > false 
+1 ==  "1"    > true
 </section>
