--- a/2015_06_DevOps/slides/why.html
+++ b/2015_06_DevOps/slides/why.html
@@ -1,18 +1,15 @@
 <section>
-<pre style="font-size: 40px;">
-
-
+<div class="embiggen">
+<pre>
 $ cat why.txt
-
-Katie supresses a javascript rant
-Lindsay  let it all out katie. 
-         you'll feel better.
-Lindsay  you're amongst friends here
-Katie    why rant here when I could put 
-         it in a talk for devops next month :P
-Katie    /sarcasm
-Lindsay  done http://meetup.com/devops-sydney/...
-Katie    ohffs
+KM supresses a JS rant
+LH let it all out katie. 
+   you'll feel better.
+KM why rant here when I could
+   put it in a talk for devops
+KM /sarcasm
+LH done meetup.com/devops-...
+KM ohffs
 </pre>
 </div>
 </section>
