--- a/2015_06_DevOps/slides/check_01.html
+++ b/2015_06_DevOps/slides/check_01.html
@@ -2,7 +2,7 @@
 <div class="embiggen">
 <pre>
 cb = document
-     .getElementById("checkbox")
+     .getElementById("cb")
 cb.checked
 </pre>
 </div>
