--- a/2015_06_DevOps/slides/check_06.html
+++ b/2015_06_DevOps/slides/check_06.html
@@ -2,12 +2,13 @@
 <div class="embiggen">
 <pre>
 cb = document
-     .getElementById("checkbox")
+     .getElementById("cb")
 cb.checked
 &gt; false
 cb.checked = "false"
 cb.checked
-&gt; true  <comment>// but "a" != true</comment>
+&gt; true<comment>
+// but "false" != true</comment>
 </pre>
 </div>
 </section>
