--- a/2015_06_DevOps/slides/equal_03.html
+++ b/2015_06_DevOps/slides/equal_03.html
@@ -1,9 +1,6 @@
 <section>
 <div class="embiggen">
 <pre>
-0 == false
-> true
-0 === false
-</pre>
-</div>
+0 ==  false  > true 
+0 === false 
 </section>
