--- a/2015_06_DevOps/slides/equal_07.html
+++ b/2015_06_DevOps/slides/equal_07.html
@@ -1,13 +1,8 @@
 <section>
 <div class="embiggen">
 <pre>
-0 == false
-> true
-0 === false
-> false
-1 == "1"
-> true
-1 === "1"
-</pre>
-</div>
+0 ==  false  > true 
+0 === false  > false 
+1 ==  "1"    > true
+1 === "1"   
 </section>
