--- a/2015_06_DevOps/slides/equal_09.html
+++ b/2015_06_DevOps/slides/equal_09.html
@@ -1,16 +1,12 @@
 <section>
 <div class="embiggen">
 <pre>
-0 == false
-> true
-0 === false
-> false
-1 == "1"
-> true
-1 === "1"
-> false
-<div style="font-size: 75%">
-Source: <b>glasnt</b>, stackoverflow
-        Jun 22 2009</div>
-</div>
+0 ==  false  > true 
+0 === false  > false 
+1 ==  "1"    > true
+1 === "1"    > false
+<comment>
+// ==  equality
+// === equality without 
+       type coersion</comment>
 </section>
