--- a/2015_06_DevOps/slides/check_000.html
+++ b/2015_06_DevOps/slides/check_000.html
@@ -1,8 +1,6 @@
 <section>
 <div class="embiggen default">
-ghsjc
-<br/>
-<br/>
-Haskell to JavaScript<br>Compiler
+JavaScript<br>
+Inconsistency
 </div>
 </section>
