Alter to compensate for Munroe Effect
If it exists, there is an xkcd comic about it.
Any correlation between your current thoughts and an xkcd comic appearing immediately are purely coincidental, and it is not anything to do with the surveillance chip in your head

--- a/2015_06_DevOps/slides/equal_04.html
+++ b/2015_06_DevOps/slides/equal_04.html
@@ -1,6 +1,7 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  > true 
-0 === false  > false 
+0 ==  false  <g>> true</g>
+0 === false  <g>> false</g>
+<comment>
 </section>
