--- a/2015_06_DevOps/slides/js_04.html
+++ b/2015_06_DevOps/slides/js_04.html
@@ -7,7 +7,7 @@ function question() {
   return answer;
 }
 
-console.log(answer);     > ""
+console.log(answer);     <g>> ""</g>
 </pre>
 </div>
 </section>
