--- a/2015_06_DevOps/slides/js_06.html
+++ b/2015_06_DevOps/slides/js_06.html
@@ -7,8 +7,8 @@ function question() {
   return answer;
 }
 
-console.log(answer);     > ""
-console.log(question()); > 42
+console.log(answer);     <g>> ""</g>
+console.log(question()); <g>> 42</g>
 </pre>
 </div>
 </section>
