--- a/2015_06_DevOps/slides/wat_05.html
+++ b/2015_06_DevOps/slides/wat_05.html
@@ -2,9 +2,9 @@
 <div class="embiggen">
 <pre>
 [] + []
-> ""
+<g>> ""</g>
 [] + {}
-> [object Object]
+<g>> [object Object]</g>
 {} + []
 </pre>
 </div>
