--- a/2015_06_DevOps/slides/wat_07.html
+++ b/2015_06_DevOps/slides/wat_07.html
@@ -2,11 +2,11 @@
 <div class="embiggen">
 <pre>
 [] + []
-> ""
+<g>> ""</g>
 [] + {}
-> [object Object]
+<g>> [object Object]</g>
 {} + []
-> 0
+<g>> 0</g>
 {} + {}
 </pre>
 </div>
