--- a/2015_06_DevOps/slides/why.html
+++ b/2015_06_DevOps/slides/why.html
@@ -3,12 +3,12 @@
 <pre>
 $ cat why.txt
 KM supresses a JS rant
-LH let it all out katie. 
-   you'll feel better.
+<g>LH let it all out katie. 
+   you'll feel better.</g>
 KM why rant here when I could
    put it in a talk for devops
 KM /sarcasm
-LH done meetup.com/devops-...
+<g>LH done meetup.com/devops-...</g>
 KM ohffs
 </pre>
 </div>
