--- a/2015_06_DevOps/slides/check_05.html
+++ b/2015_06_DevOps/slides/check_05.html
@@ -4,10 +4,11 @@
 cb = document
      .getElementById("cb")
 cb.checked
-&gt; false
+<g>> false</g>
 cb.checked = "false"
 cb.checked
-&gt; true
+<g>> true</g><comment>
+
 </pre>
 </div>
 </section>
