--- a/2015_06_DevOps/slides/check_06.html
+++ b/2015_06_DevOps/slides/check_06.html
@@ -4,10 +4,10 @@
 cb = document
      .getElementById("cb")
 cb.checked
-&gt; false
+<g>> false</g>
 cb.checked = "false"
 cb.checked
-&gt; true<comment>
+<g>> true</g><comment>
 // but "false" != true</comment>
 </pre>
 </div>
