--- a/2015_06_DevOps/slides/equal_05.html
+++ b/2015_06_DevOps/slides/equal_05.html
@@ -1,7 +1,7 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  > true 
-0 === false  > false 
-1 ==  "1"   
+0 ==  false  <g>> true</g>
+0 === false  <g>> false</g>
+1 ==  "1" <comment>
 </section>
