--- a/2015_06_DevOps/slides/equal_09.html
+++ b/2015_06_DevOps/slides/equal_09.html
@@ -1,10 +1,10 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  > true 
-0 === false  > false 
-1 ==  "1"    > true
-1 === "1"    > false
+0 ==  false  <g>> true</g>
+0 === false  <g>> false</g>
+1 ==  "1"    <g>> true</g>
+1 === "1"    <g>> false</g>
 <comment>
 // ==  equality
 // === equality without 
