--- a/2015_06_DevOps/slides/js_07.html
+++ b/2015_06_DevOps/slides/js_07.html
@@ -7,9 +7,9 @@ function question() {
   return answer;
 }
 
-console.log(answer);     > ""
-console.log(question()); > 42
-console.log(answer);
+console.log(answer);     <g>> ""</g>
+console.log(question()); <g>> 42</g>
+console.log(answer);     
 </pre>
 </div>
 </section>
