--- a/2015_06_DevOps/slides/types_08.html
+++ b/2015_06_DevOps/slides/types_08.html
@@ -2,13 +2,13 @@
 <div class="embiggen">
 <pre>
 4 + 2 
-> 6
+<g>> 6</g>
 4 - 2
-> 2
+<g>> 2</g>
 "4" - 2 
-> 2     <comment>// type -&gt; int</comment>
+<g>> 2 </g><comment>// type -&gt; int</comment>
 "4" + 2
-> "42"  <comment>// type -&gt; string</comment>
+<g>> "42"</g><comment>// type -&gt; string</comment>
 </pre>
 </div>
 </section>
