--- a/2015_06_DevOps/slides/wat_04.html
+++ b/2015_06_DevOps/slides/wat_04.html
@@ -2,9 +2,10 @@
 <div class="embiggen">
 <pre>
 [] + []
-> ""
+<g>> ""</g>
 [] + {}
-> [object Object]
+<g>> [object Object]</g>
+
 </pre>
 </div>
 </section>
