--- a/2015_06_DevOps/slides/wat_09.html
+++ b/2015_06_DevOps/slides/wat_09.html
@@ -2,13 +2,13 @@
 <div class="embiggen">
 <pre>
 [] + []
-> ""
+<g>> ""</g>
 [] + {}
-> [object Object]
+<g>> [object Object]</g>
 {} + []
-> 0
+<g>> 0</g>
 {} + {}
-> NaN   <comment>// wat.mov</comment>
+<g>> NaN</g>   <comment>// wat.mov</comment>
 </pre>
 </div>
 </section>
