--- a/2015_06_DevOps/slides/xkcd_00.html
+++ b/2015_06_DevOps/slides/xkcd_00.html
@@ -1,11 +1,7 @@
 <section>
 <div class="embiggen">
-<pre>
-4 + 2 
-<g>> 6</g>
-4 - 2
-<g>> 2</g>
-"4" - 2 
+<pre><comment>// xkcd.com/1537</comment>
+
 </pre>
 </div>
 </section>
