--- a/2015_06_DevOps/slides/TitleSlide.html
+++ b/2015_06_DevOps/slides/TitleSlide.html
@@ -1,6 +1,12 @@
 <section class="nopage">
+
+
+<img src="pictures/title.jpg" class="background">
+
 <div class="embiggen default">
-Javascript <br/>Rant
+<br/>
+<br/>
+Javascript Rant
 <br/>
 <br/>
 <div style="font-size: 30px">katie@glasnt.com</div>
