Any more examples and this will be a full length talk

--- a/2015_06_DevOps/slides/array4_01.html
+++ b/2015_06_DevOps/slides/array4_01.html
@@ -1,8 +1,9 @@
 <section>
 <div class="embiggen">
 <pre>
-arr
-<g>> ["a", "b", "c"]</g>
+arr.push("append")
+<g>> 4</g>
+
 </pre>
 </div>
 </section>
