--- a/2015_06_DevOps/slides/array2_02.html
+++ b/2015_06_DevOps/slides/array2_02.html
@@ -1,9 +1,9 @@
 <section>
 <div class="embiggen">
 <pre>
-var arr = ['a', 'b', 'c']
-arr
-<g>> ["a", "b", "c"]</g>
+> var arr = ['a', 'b', 'c']
+> arr
+<g>["a", "b", "c"]</g>
 </pre>
 </div>
 </section>
