--- a/2015_06_DevOps/slides/array3_00.html
+++ b/2015_06_DevOps/slides/array3_00.html
@@ -1,11 +1,11 @@
 <section>
 <div class="embiggen">
 <pre>
-arr
-<g>> ["a", "b", "c"]</g>
-for (var k in arr) { 
-  console.log(k); 
-}
+> arr
+<g>["a", "b", "c"]</g>
+> for (var k in arr) { 
+>   console.log(k); 
+> }
 </pre>
 </div>
 </section>
