--- a/2015_06_DevOps/slides/array4_02.html
+++ b/2015_06_DevOps/slides/array4_02.html
@@ -1,11 +1,11 @@
 <section>
 <div class="embiggen">
 <pre>
-arr.push("append")
-<g>> 4</g>
-c = 0
-for (var k in arr) { c++ }
-c
+> arr.push("append")
+<g>4</g>
+> c = 0
+> for (var k in arr) { c++ }
+> c
 </pre>
 </div>
 </section>
