--- a/2015_06_DevOps/slides/array4_03.html
+++ b/2015_06_DevOps/slides/array4_03.html
@@ -1,12 +1,12 @@
 <section>
 <div class="embiggen">
 <pre>
-arr.push("append")
-<g>> 4</g>
-c = 0
-for (var k in arr) { c++ }
-c
-<g>> 5</g>
+> arr.push("append")
+<g>4</g>
+> c = 0
+> for (var k in arr) { c++ }
+> c
+<g>5</g>
 </pre>
 </div>
 </section>
