--- a/2015_06_DevOps/slides/array4_04.html
+++ b/2015_06_DevOps/slides/array4_04.html
@@ -1,13 +1,13 @@
 <section>
 <div class="embiggen">
 <pre>
-arr.push("append")
-<g>> 4</g>
-c = 0
-for (var k in arr) { c++ }
-c
-<g>> 5</g>
-arr.length
+> arr.push("append")
+<g>4</g>
+> c = 0
+> for (var k in arr) { c++ }
+> c
+<g>5</g>
+> arr.length
 </pre>
 </div>
 </section>
