--- a/2015_06_DevOps/slides/check_03.html
+++ b/2015_06_DevOps/slides/check_03.html
@@ -1,11 +1,11 @@
 <section>
 <div class="embiggen">
 <pre>
-cb = document
-     .getElementById("cb")
-cb.checked
-<g>> false</g>
-cb.checked = "false"
+> cb = document
+>      .getElementById("cb")
+> cb.checked
+<g>false</g>
+> cb.checked = "false"
 </pre>
 </div>
 </section>
