--- a/2015_06_DevOps/slides/frus_01.html
+++ b/2015_06_DevOps/slides/frus_01.html
@@ -3,7 +3,7 @@
 <div class="avatar"><img src="pictures/9spq10u3_bigger.jpg"></div>
 <div class="name">Lindsay Holmwood</div>
 <div class="handle">@auxesis</div>
-<div class="content">.. just please don't hire me for my JS abilities. I'm proficient enough to loath the language intensely</div>
+<div class="content">... just please don't hire me for my JS abilities. I'm proficient enough to loath the language intensely</div>
 <div class="date"> 4:55 PM - 27 May 2015</div>
 </div>
 
