--- a/2015_06_DevOps/slides/frus_02.html
+++ b/2015_06_DevOps/slides/frus_02.html
@@ -3,7 +3,7 @@
 <div class="avatar"><img src="pictures/dScbhc1e_bigger.jpg"></div>
 <div class="name">Michael Neale</div>
 <div class="handle">@michaelneale</div>
-<div class="content">.. yeah I have been around [@auxesis]   
+<div class="content">... yeah I have been around [@auxesis]   
 when he hacks js. Let's just say Satan himself would blush.</div>
 
 <div class="date"> 5:54 PM - 27 May 2015</div>
