--- a/2015_06_DevOps/slides/js_02.html
+++ b/2015_06_DevOps/slides/js_02.html
@@ -1,10 +1,10 @@
 <section>
 <div class="embiggen">
-<pre>answer = "";
-function question() { 
-  var answer = 42; 
-  return answer;
-}
+<pre>> ans = "";
+> function q() { 
+>   var ans = 42; 
+>   return ans;
+> }
 </pre>
 </div>
 </section>
