--- a/2015_06_DevOps/slides/js_04.html
+++ b/2015_06_DevOps/slides/js_04.html
@@ -1,13 +1,12 @@
 <section>
 <div class="embiggen">
-<pre>
-answer = "";
-function question() { 
-  var answer = 42; 
-  return answer;
-}
-
-console.log(answer);     <g>> ""</g>
+<pre><div>> ans = ""; 
+> function q() { 
+>   var ans = 42;
+>   return ans;
+> }</div>
+> console.log(ans);
+<g>""</g>
 </pre>
 </div>
 </section>
