--- a/2015_06_DevOps/slides/js_07.html
+++ b/2015_06_DevOps/slides/js_07.html
@@ -1,15 +1,17 @@
 <section>
 <div class="embiggen">
 <pre>
-answer = "";
-function question() { 
-  var answer = 42; 
-  return answer;
-}
+> ans = ""; 
+> function q() { 
+>   var ans = 42;
+>   return ans;
+> }
 
-console.log(answer);     <g>> ""</g>
-console.log(question()); <g>> 42</g>
-console.log(answer);     
+> console.log(ans); 
+<g>""</g>
+> console.log(q()); 
+<g>42</g>
+> console.log(ans); 
 </pre>
 </div>
 </section>
