--- a/2015_06_DevOps/slides/js_13.html
+++ b/2015_06_DevOps/slides/js_13.html
@@ -2,13 +2,13 @@
 <div class="embiggen">
 <pre>
 <comment>//ruby</comment>
-<b>@</b>answer = 42;
+<b>@</b>ans = 42;
 
 <comment>//python</comment>
-<b>global</b> answer = 42;
+<b>global</b> ans = 42;
 
 <comment>//java</comment>
-<b>public statc </b>answer = 42;
+<b>public static </b>ans = 42;
 
 </pre>
 </div>
