--- a/2015_06_DevOps/slides/wat_04.html
+++ b/2015_06_DevOps/slides/wat_04.html
@@ -1,10 +1,10 @@
 <section>
 <div class="embiggen">
 <pre>
-[] + []
-<g>> ""</g>
-[] + {}
-<g>> [object Object]</g>
+> [] + []
+<g>""</g>
+> [] + {}
+<g>[object Object]</g>
 
 </pre>
 </div>
