--- a/2015_06_DevOps/slides/wat_07.html
+++ b/2015_06_DevOps/slides/wat_07.html
@@ -1,13 +1,13 @@
 <section>
 <div class="embiggen">
 <pre>
-[] + []
-<g>> ""</g>
-[] + {}
-<g>> [object Object]</g>
-{} + []
-<g>> 0</g>
-{} + {}
+> [] + []
+<g>""</g>
+> [] + {}
+<g>[object Object]</g>
+> {} + []
+<g>0</g>
+> {} + {}
 </pre>
 </div>
 </section>
