--- a/2015_06_DevOps/slides/wat_09.html
+++ b/2015_06_DevOps/slides/wat_09.html
@@ -1,14 +1,14 @@
 <section>
 <div class="embiggen">
 <pre>
-[] + []
-<g>> ""</g>
-[] + {}
-<g>> [object Object]</g>
-{} + []
-<g>> 0</g>
-{} + {}
-<g>> NaN</g>   <comment>// wat.mov</comment>
+> [] + []
+<g>""</g>
+> [] + {}
+<g>[object Object]</g>
+> {} + []
+<g>0</g>
+> {} + {}
+<g>NaN</g>   <comment>// wat.mov</comment>
 </pre>
 </div>
 </section>
