--- a/2015_06_DevOps/slides/xkcd_02.html
+++ b/2015_06_DevOps/slides/xkcd_02.html
@@ -1,8 +1,8 @@
 <section>
 <div class="embiggen"><pre>
 <comment>// xkcd.com/1537</comment>
-(2/0)
-<g>> NaN</g>   
+> (2/0)
+<g>NaN</g>   
 </pre>
 </div>
 </section>
