--- a/2015_06_DevOps/slides/array2_01.html
+++ b/2015_06_DevOps/slides/array2_01.html
@@ -1,8 +1,8 @@
 <section>
 <div class="embiggen">
 <pre>
-var arr = ['a', 'b', 'c']
-arr
+> var arr = ['a', 'b', 'c']
+> arr
 </pre>
 </div>
 </section>
