--- a/2015_06_DevOps/slides/array2_03.html
+++ b/2015_06_DevOps/slides/array2_03.html
@@ -1,10 +1,10 @@
 <section>
 <div class="embiggen">
 <pre>
-var arr = ['a', 'b', 'c']
-arr
-<g>> ["a", "b", "c"]</g>
-arr.hello = "world"
+> var arr = ['a', 'b', 'c']
+> arr
+<g>["a", "b", "c"]</g>
+> arr.hello = "world"
 </pre>
 </div>
 </section>
