--- a/2015_06_DevOps/slides/check_00.html
+++ b/2015_06_DevOps/slides/check_00.html
@@ -1,8 +1,8 @@
 <section>
 <div class="embiggen">
 <pre>
-cb = document
-     .getElementById("cb")
+> cb = document
+>      .getElementById("cb")
 </pre>
 </div>
 </section>
