--- a/2015_06_DevOps/slides/check_01.html
+++ b/2015_06_DevOps/slides/check_01.html
@@ -1,9 +1,9 @@
 <section>
 <div class="embiggen">
 <pre>
-cb = document
-     .getElementById("cb")
-cb.checked
+> cb = document
+>      .getElementById("cb")
+> cb.checked
 </pre>
 </div>
 </section>
