--- a/2015_06_DevOps/slides/check_02.html
+++ b/2015_06_DevOps/slides/check_02.html
@@ -1,10 +1,10 @@
 <section>
 <div class="embiggen">
 <pre>
-cb = document
-     .getElementById("cb")
-cb.checked
-<g>> false</g>
+> cb = document
+>      .getElementById("cb")
+> cb.checked
+<g>false</g>
 </pre>
 </div>
 </section>
