--- a/2015_06_DevOps/slides/check_04.html
+++ b/2015_06_DevOps/slides/check_04.html
@@ -1,12 +1,12 @@
 <section>
 <div class="embiggen">
 <pre>
-cb = document
-     .getElementById("cb")
-cb.checked
-<g>> false</g>
-cb.checked = "false"
-cb.checked
+> cb = document
+>      .getElementById("cb")
+> cb.checked
+<g>false</g>
+> cb.checked = "false"
+> cb.checked
 </pre>
 </div>
 </section>
