--- a/2015_06_DevOps/slides/check_06.html
+++ b/2015_06_DevOps/slides/check_06.html
@@ -1,13 +1,13 @@
 <section>
 <div class="embiggen">
 <pre>
-cb = document
-     .getElementById("cb")
-cb.checked
-<g>> false</g>
-cb.checked = "false"
-cb.checked
-<g>> true</g><comment>
+> cb = document
+>      .getElementById("cb")
+> cb.checked
+<g>false</g>
+> cb.checked = "false"
+> cb.checked
+<g>true</g><comment>
 // but "false" != true</comment>
 </pre>
 </div>
