--- a/2015_06_DevOps/slides/equal_03.html
+++ b/2015_06_DevOps/slides/equal_03.html
@@ -1,7 +1,8 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  <g>> true</g>
-0 === false 
+> 0 ==  false  
+<g>true</g>
+> 0 === false 
 <comment>
 </section>
