--- a/2015_06_DevOps/slides/equal_04.html
+++ b/2015_06_DevOps/slides/equal_04.html
@@ -1,7 +1,9 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  <g>> true</g>
-0 === false  <g>> false</g>
+> 0 ==  false  
+<g>true</g>
+> 0 === false  
+<g>false</g>
 <comment>
 </section>
