--- a/2015_06_DevOps/slides/equal_06.html
+++ b/2015_06_DevOps/slides/equal_06.html
@@ -1,9 +1,12 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  <g>> true</g>
-0 === false  <g>> false</g>
-1 ==  "1"    <g>> true</g>
+> 0 ==  false 
+<g>true</g>
+> 0 === false 
+<g>false</g>
+> 1 ==  "1"   
+<g>true</g>
 
 <comment>
 </section>
