--- a/2015_06_DevOps/slides/equal_09.html
+++ b/2015_06_DevOps/slides/equal_09.html
@@ -1,12 +1,15 @@
 <section>
 <div class="embiggen">
 <pre>
-0 ==  false  <g>> true</g>
-0 === false  <g>> false</g>
-1 ==  "1"    <g>> true</g>
-1 === "1"    <g>> false</g>
-<comment>
-// ==  equality
+> 0 ==  false  
+<g>true</g>
+> 0 === false  
+<g>false</g>
+> 1 ==  "1"    
+<g>true</g>
+> 1 === "1"    
+<g>false</g>
+<comment>// ==  equality
 // === equality without 
        type coersion</comment>
 </section>
