--- a/2015_06_DevOps/slides/frus_05.html
+++ b/2015_06_DevOps/slides/frus_05.html
@@ -4,7 +4,7 @@
 <div class="name">Adam</div>
 <div class="handle">@NamTaf</div>
 <div class="content">
-.. when that's the glue of the modern day web it's minor miracle that society even functions
+... when that's the glue of the modern day web it's minor miracle that society even functions
 </div>
 <div class="date">6:12 PM - 22 Apr 2015</div>
 
