--- a/2015_06_DevOps/slides/js_03.html
+++ b/2015_06_DevOps/slides/js_03.html
@@ -1,13 +1,13 @@
 <section>
 <div class="embiggen">
 <pre>
-answer = "";
-function question() { 
-  var answer = 42; 
-  return answer;
-}
+> ans = "";
+> function q() { 
+>   var ans = 42; 
+>   return ans;
+> }
 
-console.log(answer);
+> console.log(ans);
 </pre>
 </div>
 </section>
