--- a/2015_06_DevOps/slides/js_05.html
+++ b/2015_06_DevOps/slides/js_05.html
@@ -1,14 +1,15 @@
 <section>
 <div class="embiggen">
 <pre>
-answer = "";
-function question() { 
-  var answer = 42; 
-  return answer;
-}
+> ans = ""; 
+> function q() { 
+>   var ans = 42;
+>   return ans;
+> }
 
-console.log(answer);     <g>> ""</g>
-console.log(question());
+> console.log(ans); 
+<g>""</g>
+> console.log(q()); 
 </pre>
 </div>
 </section>
