--- a/2015_06_DevOps/slides/wat_05.html
+++ b/2015_06_DevOps/slides/wat_05.html
@@ -1,11 +1,11 @@
 <section>
 <div class="embiggen">
 <pre>
-[] + []
-<g>> ""</g>
-[] + {}
-<g>> [object Object]</g>
-{} + []
+> [] + []
+<g>""</g>
+> [] + {}
+<g>[object Object]</g>
+> {} + []
 </pre>
 </div>
 </section>
