--- a/2015_06_DevOps/slides/xkcd_03.html
+++ b/2015_06_DevOps/slides/xkcd_03.html
@@ -1,9 +1,9 @@
 <section>
 <div class="embiggen"><pre>
 <comment>// xkcd.com/1537</comment>
-(2/0)
-<g>> NaN</g>
-(2/0) + 2   
+> (2/0)
+<g>NaN</g>
+> (2/0) + 2   
 </pre>
 </div>
 </section>
