--- a/2015_06_DevOps/slides/js_04.html
+++ b/2015_06_DevOps/slides/js_04.html
@@ -1,10 +1,10 @@
 <section>
 <div class="embiggen">
-<pre><div>> ans = ""; 
+<pre>> ans = ""; 
 > function q() { 
 >   var ans = 42;
 >   return ans;
-> }</div>
+> }
 > console.log(ans);
 <g>""</g>
 </pre>
