--- a/2015_06_DevOps/slides/why.html
+++ b/2015_06_DevOps/slides/why.html
@@ -1,6 +1,7 @@
 <section>
-<div class="embiggen">
+<div class="embiggen2">
 <pre>
+
 $ cat why.txt
 KM supresses a JS rant
 <g>LH let it all out katie. 
