--- a/2015_06_DevOps/slides/equal_09.html
+++ b/2015_06_DevOps/slides/equal_09.html
@@ -5,11 +5,8 @@
 <g>true</g>
 > 0 === false  
 <g>false</g>
-> 1 ==  "1"    
-<g>true</g>
-> 1 === "1"    
-<g>false</g>
-<comment>// ==  equality
-// === equality without 
-       type coersion</comment>
+> 1 ==  "1"<comment>//equality</comment>   
+<g>true</g> 
+> 1 === "1"<comment>//equality w/o</comment>   
+<g>false</g>      <comment>//type coersion</comment>
 </section>
