I might need some style

--- a/2015_07_SyPy/slides/HatRack.html
+++ b/2015_07_SyPy/slides/HatRack.html
@@ -1,5 +1,5 @@
 <section>
 <div>
-<div class="title" class="font-size: 72px">DÅLIGORDLEK</div>
+<div class="title" style="text-align:left; font-size: 72px">DÅLIGORDLEK</div>
 <img src="pictures/hatrack.svg" style="margin-top: -60px" />
  </div> </section>
