--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <h1>glasnt's talks</h1>
 <br/>
+<p>A full list can be seen at: https://github.com/glasnt/talks</a>
+
+<h2>Python Sydney (SyPy), July 2015</h2>
+<ul><li><a href="2015_07_SyPy">Hat Rack</a><li><ul>
+
+<h2>Port80 Sydney, June, 2015</h2>
+<ul><li><a href="2015_06_Port80">Introduction to hacking OWASP</a></li></ul>
+
+<h2>DevOps Sydney, June, 2015</h2>
+<ul><li><a href="2015_06_DevOps">JavaScript Rant</a></li></ul>
 
 <h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
 <ul><li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a></li></ul>
