--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p>A full list can be seen at: https://github.com/glasnt/talks</a>
 
 <h2>Python Sydney (SyPy), July 2015</h2>
-<ul><li><a href="2015_07_SyPy">Hat Rack</a><li><ul>
+<ul><li><a href="2015_07_SyPy">Hat Rack</a></li></ul>
 
 <h2>Port80 Sydney, June, 2015</h2>
 <ul><li><a href="2015_06_Port80">Introduction to hacking OWASP</a></li></ul>
