--- a/2015_08_Pycon_Abandonware/index.html
+++ b/2015_08_Pycon_Abandonware/index.html
@@ -12,7 +12,7 @@
 
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-<title>Build a Better Hat Rack - All Contributions Welcome</title>
+<title>Life after death - How to deal with abandoned projects</title>
 </head>
 
 <body>
