--- a/2015_08_Pycon_Hatrack/slides/GitHub_01.html
+++ b/2015_08_Pycon_Hatrack/slides/GitHub_01.html
@@ -1,1 +1,1 @@
-<section> <div class="background"> <img src="pictures/FullGHProfile.png" /> </div> </section>
+<section> <div class="background"> <img src="pictures/glasnt_public_profile.svg" /> </div> </section>
