--- a/2015_08_Pycon_Hatrack/slides/LABHR_2.html
+++ b/2015_08_Pycon_Hatrack/slides/LABHR_2.html
@@ -1,7 +1,7 @@
 <section>
 <div>
 <p align="center">
-<div class="title center" style="margin-top:150px">#LABHR</div>
+<div class="title center" style="font-size: 120px; margin-top:150px">#LABHR</div>
 <br/>
 <div class="title center" style="font-size: 68px">bit.do/LABHR</div>
 </p>
