--- a/2015_08_Pycon_Hatrack/slides/LinkedIn_2.html
+++ b/2015_08_Pycon_Hatrack/slides/LinkedIn_2.html
@@ -1,1 +1,1 @@
-<section> <div class="background"> <img src="pictures/LinkedInBackground.png" /> </div> </section>
+<section> <div class="background"> <img src="pictures/linked_in_sections.svg" /> </div> </section>
