--- a/2015_08_Pycon_Hatrack/slides/LinkedIn_3.html
+++ b/2015_08_Pycon_Hatrack/slides/LinkedIn_3.html
@@ -1,1 +1,1 @@
-<section> <div class="background"> <img src="pictures/LinkedInSkills.png" /> </div> </section>
+<section> <div class="background"> <img src="pictures/linked_in_sections_recommendable.svg" /> </div> </section>
