--- a/2015_08_Pycon_Hatrack/slides/GitHub_02.html
+++ b/2015_08_Pycon_Hatrack/slides/GitHub_02.html
@@ -1,1 +1,1 @@
-<section> <div class="background"> <img src="pictures/PublicGHContrib.png" /> </div> </section>
+<section> <div class="background"> <img src="pictures/glasnt_public_contrib.svg" /> </div> </section>
