--- a/2015_08_Pycon_Hatrack/slides/About.html
+++ b/2015_08_Pycon_Hatrack/slides/About.html
@@ -5,6 +5,6 @@
 <br>
 <br>
 <br>
-<div style="text-align: center">Hi! I'm Katie. <br><br/>I'm a software developer</div>
+<div style="text-align: center">Hi! I'm Katie. <br><br/>I do computer things</div>
 
 </section>
