--- a/2015_08_Pycon_Hatrack/slides/Contrib_0Y.html
+++ b/2015_08_Pycon_Hatrack/slides/Contrib_0Y.html
@@ -1,1 +1,1 @@
-<section> <div class="background"><img src="pictures/contrib_graph_hack.svg"> </div> </section>
+<section> <div class="point">ozh.org/contributions</div><p align="center"><img src="pictures/contrib_graph_hack.png" width="100%"> </p> </section>
