--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_00.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_00.html
@@ -1,4 +1,4 @@
 <section>
 
-  <div class="title center" style="margin-top:200px">There is an API though...</div>
+  <div class="point">There is an API though...</div>
 </section>
