--- a/2015_08_Pycon_Abandonware/slides/About.html
+++ b/2015_08_Pycon_Abandonware/slides/About.html
@@ -1,3 +1,3 @@
 <section>
-<div class="title" style="font-size: 80px; margin-top: 100px">Hi!<br>Do I know you?</div>
+<div class="title main">Hi!</div>
 </section>
