--- a/2015_08_Pycon_Hatrack/slides/TheEnd.html
+++ b/2015_08_Pycon_Hatrack/slides/TheEnd.html
@@ -2,8 +2,23 @@
 <div>
 <p align="center">
 <div class="title center" style="font-size: 120px; margin-top:150px">#LABHR</div>
-<br/>
 <div class="title center" style="font-size: 68px">bit.do/LABHR</div>
+<div class="attr">
+<br/>
+Non-code contributors to this talk:
+<br/>
+<p style="padding: 0px 50px 0px 50px">
+Donna&nbsp;Benjamin,
+Steve&nbsp;Cooper,
+Ben&nbsp;Dechrai,
+Tom&nbsp;Eastman,
+John&nbsp;Ferlito,
+Leslie&nbsp;Hawthorn,
+Christopher&nbsp;Neugebauer,
+Davey&nbsp;Shafik,
+Jack&nbsp;Skinner</p>
+<p align="right">Thank you &lt;3</p>
+</div>
 </p>
 </div>
 </section>
