--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_02.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_02.html
@@ -1,6 +1,6 @@
 <section>
-  <div class="point"><img src="pictures/gh_logo.png" width="80">/glasnt/octohat</div>
+  <div class="point">pip install octohat</div>
     <pre style="text-align:center"><code>
-./octohat githubuser/repo
+octohat &lt;githubuser/repo&gt;
    </pre></code>
 </section>
