--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_05.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_05.html
@@ -1,7 +1,7 @@
 <section>
-  <div class="point"><img src="pictures/gh_logo.png" width="80">/glasnt/octohat</div>
+<div class="point">pip install octohat</div>
     <pre style="text-align:center"><code>
-./octohat akvinassh/rockstar
+octohat akvinassh/rockstar
 
 16 Code Contributors
    </pre></code>
