--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_07.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_07.html
@@ -1,9 +1,8 @@
 <section>
 <div class="point">pip install octohat</div>
     <pre style="text-align:center"><code>
-octohat kennethreitz/requests
+octohat glasnt/octohat
 
-351 Code Contributors
-1263 Non-Code Contributors
+1 Code Contributor
    </pre></code>
 </section>
