--- a/2015_08_Pycon_Hatrack/slides/Thanks.html
+++ b/2015_08_Pycon_Hatrack/slides/Thanks.html
@@ -7,13 +7,14 @@
 <br/>
 Non-code contributors to this talk:
 <br/>
-<p style="padding: 0px 50px 0px 50px">
+<p style="padding: 0px 30px 0px 30px">
 Donna&nbsp;Benjamin,
+Nick&nbsp;Coghlan,
 Steve&nbsp;Cooper,
 Ben&nbsp;Dechrai,
 Tom&nbsp;Eastman,
-John&nbsp;Ferlito,
 Leslie&nbsp;Hawthorn,
+Lindsay&nbsp;Holmwood,
 Christopher&nbsp;Neugebauer,
 Davey&nbsp;Shafik,
 Jack&nbsp;Skinner</p>
