--- a/2015_08_Pycon_Hatrack/slides/Contrib_0X3.html
+++ b/2015_08_Pycon_Hatrack/slides/Contrib_0X3.html
@@ -1,10 +1,11 @@
 <section>
 
-  <div class="point">pip install rockstar</div>
-  <pre style="margin-left: 80px"><code>
-from RockStar import RockStar
-
-rock_it_bro = RockStar(days=300)
-rock_it_bro.make_me_a_rockstar()
+  <pre class="rockstar"><code>
+$ pip install rockstar
+$ python
+>>> from RockStar import RockStar
+>>>
+>>> rock_it_bro = RockStar(days=300)
+>>> rock_it_bro.make_me_a_rockstar()
 </code></pre>
 </section>
