--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_01.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_01.html
@@ -1,6 +1,6 @@
 <section>
   
-<div class="point">pip install octohat</div>
-<div class="point"><img src="pictures/gh_logo.png" width="80">/glasnt/octohat</div>
+<div class="point"><br>
+github.com/glasnt/octohat</div>
 
 </section>
