--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_04.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_04.html
@@ -1,9 +1,12 @@
 <section>
-<div class="point">pip install octohat</div>
-    <pre style="text-align:center"><code>
-octohat kennethreitz/requests
+    <pre class="octohat"><code>
+$ pip install octohat
+
+$ octohat kennethreitz/requests
 
 351 Code Contributors
 1263 Non-Code Contributors
+
    </pre></code>
+<footer># https://github.com/glasnt/octohat</footer>
 </section>
