--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_06.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_06.html
@@ -1,9 +1,11 @@
 <section>
-<div class="point">pip install octohat</div>
-    <pre style="text-align:center"><code>
-octohat akvinassh/rockstar
+    <pre class="octohat"><code>
+$ pip install octohat
 
-16 Code Contributors
-12 Non-Code Contributors
+$ octohat avinassh/rockstar
+
+27 Code Contributors
+30 Non-Code Contributors
    </pre></code>
+<footer># https://github.com/glasnt/octohat</footer>
 </section>
