--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_07.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_07.html
@@ -1,8 +1,12 @@
 <section>
-<div class="point">pip install octohat</div>
-    <pre style="text-align:center"><code>
-octohat glasnt/octohat
+    <pre class="octohat"><code>
+$ pip install octohat
 
-1 Code Contributor
+$ octohat glasnt/octohat
+
+1 Code Contributors
+
    </pre></code>
+<footer># https://github.com/glasnt/octohat</footer>
 </section>
+
