--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_08.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_08.html
@@ -1,9 +1,12 @@
 <section>
-<div class="point">pip install octohat</div>
-    <pre style="text-align:center"><code>
-octohat glasnt/octohat
+    <pre class="octohat"><code>
+$ pip install octohat
+
+$ octohat glasnt/octohat
 
 1 Code Contributor
 1 Non-Code Contributor
    </pre></code>
+<footer># https://github.com/glasnt/octohat</footer>
 </section>
+
