--- a/2015_08_Pycon_Hatrack/slides/Contrib_0X4.html
+++ b/2015_08_Pycon_Hatrack/slides/Contrib_0X4.html
@@ -1,4 +1,12 @@
 <section>
-<div class="point">pip install rockstar</div>
 
+  <pre class="rockstar"><code>
+$ pip install rockstar
+$ python
+>>> from RockStar import RockStar
+>>>
+>>> rock_it_bro = RockStar(days=300)
+>>> rock_it_bro.make_me_a_rockstar()
+</code></pre>
  <div style="text-align:center"><img src="pictures/greensgreensgreens.png"> </div> </section>
+</section>
