--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_00.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_00.html
@@ -1,4 +1,3 @@
 <section>
-
-  <div class="point">There is an API though...</div>
+  <div class="point">Can we get this information out of GitHub?<br/></div>
 </section>
