--- a/2015_08_Pycon_Hatrack/slides/NonCodeContrib_02.html
+++ b/2015_08_Pycon_Hatrack/slides/NonCodeContrib_02.html
@@ -1,6 +1,8 @@
 <section>
-  <div class="point">pip install octohat</div>
-    <pre style="text-align:center"><code>
-octohat &lt;githubuser/repo&gt;
+    <pre class="octohat"><code>
+$ pip install octohat
+
+$ octohat &lt;githubuser/repo&gt;
    </pre></code>
+<footer># https://github.com/glasnt/octohat</footer>
 </section>
