Remove superflousous content, update things

--- a/2015_08_Pycon_Abandonware/slides/ResponsibleAb_00.html
+++ b/2015_08_Pycon_Abandonware/slides/ResponsibleAb_00.html
@@ -1,6 +1,6 @@
 <section>
 <br/><br/>
 <div class="center">
-<div>Abandon Responsibly<br/>without abandonding responsibility
+<div>Abandon Responsibly<br/>without abandoning responsibility
 </section>
 
