those were important

--- a/index.html
+++ b/index.html
@@ -1,44 +1,71 @@
-<h1>glasnt's talks</h1>
-<br/>
-<p>A full list can be seen at: https://github.com/glasnt/talks</a>
+<style> 
+  td { vertical-align: top; padding: 0 40 0 0;}
+  body { font-family: 'PT Sans' } 
+  .content {margin-left: 20px; } 
+  h2 { margin-bottom: 0px }
+  .h0 { font-size: 40px }
+</style>
 
-<h2>Python Sydney (SyPy), July 2015</h2>
-<ul><li><a href="2015_07_SyPy">Hat Rack</a></li></ul>
+<div class="content">
+<div class="h0">glasnt's talks</div>
+<br><br><br><br>
+<table><tr><td>
+<h1>Full Talks</h1>
 
-<h2>Port80 Sydney, June, 2015</h2>
-<ul><li><a href="2015_06_Port80">Introduction to hacking OWASP</a></li></ul>
+<h2>PyCon AU, Brisbane, August 2015</h2>
+<li>Build a Better Hat Rack: All Contributions Welcome
+<li>Life After Death: How to handle abandoned projects
 
-<h2>DevOps Sydney, June, 2015</h2>
-<ul><li><a href="2015_06_DevOps">JavaScript Rant</a></li></ul>
-
-<h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
-<ul><li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a></li></ul>
-
-<h2>DevOps, Sydney, March 2015</h2>
-<ul><li><a href="2015_03_DevOps/HatRack.pdf">Hat Rack</a></li></ul>
-
-<h2>SydPHP, Sydney, March 2015</h2>
-<ul><li><a href="2015_03_SydPHP/HatRack.pdf">Hat Rack</a></li></ul>
-
-<h2>PhunConf 5 Workshop, Sydney, Feburary 2015</h2>
-<ul><li><a href="2015_02_PhunConf/SecurityTutorial.pdf">In ur s3rvs h4k1ng ur c0dez, a Security Tutorial</a></li></ul>
+<h2>DevOpsDays Melbourne, July 2015</h2>
+<li>Panel: The platform or the road map? (No slides) (Video pending)
+<li>Ignite Karaoke (No slides) (Video pending)
 
 <h2>Linux Conference Australia, Auckland, January 2015</h2>
-<ul>
-<li><a href="2015_01_LCA_Gyprock">Disentangle a new fangled image mangler</a>
-<li><a href="2015_01_LCA_Machiavelli">Before All Else, Be Graphed</a>
-</ul>
 
-<h2>Women Who Code, Sydney, December 2014</h2>
-<ul><li><a href="2014_12_WomenWhoCode/">Hack and Tell</a></li></ul>
-
-
-<h2>DevOps, Sydney, November 2014</h2>
-<ul><li><a href="2014_11_DevOps/">Integrating Machiavelli and Nagios</a></li></ul>
+<li><a href="2015_01_LCA_Gyprock">Disentangle a new fangled image mangler</a> <a href="https://www.youtube.com/watch?v=XedLGMp38xA">[Video]</a>
+<li><a href="2015_01_LCA_Machiavelli">Before All Else, Be Graphed</a> <a href="www.youtube.com/watch?v=My65wJ-sBVc">[Video]</a>
 
 <h2>Open Source Developers Conference, Gold Coast, October 2014</h2>
-<ul>
-<li><a href="2014_10_OSDC_Gyprock">Disentangle a new fangled image mangler</a>
-<li><a href="2014_11_OSDC_Machiavelli">Before All Else, Be Graphed</a>
 
-</ul>
+<li><a href="2014_10_OSDC_Gyprock">Disentangle a new fangled image mangler</a> <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">[Video]</a>
+<li><a href="2014_11_OSDC_Machiavelli">Before All Else, Be Graphed</a> <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">[Video]</a>
+<br><br>
+<h1>Workshops</h1>
+
+<h2>Port80 Sydney, June, 2015</h2>
+<li><a href="2015_06_Port80/Workshop.pdf">Introduction to hacking OWASP</a>
+
+<h2>PhunConf 5 Workshop, Sydney, February 2015</h2>
+<li><a href="2015_02_PhunConf/SecurityTutorial.pdf">In ur s3rvs h4k1ng ur c0dez, a Security Tutorial</a>
+
+
+</td><td>
+<h1> Lightning Talks </h1>
+
+<h2>Python Sydney (SyPy), July 2015</h2>
+<li><a href="2015_07_SyPy">Hat Rack</a>
+
+<h2>DevOps Sydney, June, 2015</h2>
+<li><a href="2015_06_DevOps">JavaScript Rant</a> <a href="https://www.youtube.com/watch?v=nx0yt0YsDnA">[Video]</a>
+
+<h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
+<li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a>
+
+<h2>DevOps, Sydney, March 2015</h2>
+<li><a href="2015_03_DevOps/HatRack.pdf">Hat Rack</a>
+
+<h2>SydPHP, Sydney, March 2015</h2>
+<li><a href="2015_03_SydPHP/HatRack.pdf">Hat Rack</a>
+
+<h2>Women Who Code, Sydney, December 2014</h2>
+<li><a href="2014_12_WomenWhoCode/">Hack and Tell - Machiavelli</a>
+
+<h2>DevOps, Sydney, November 2014</h2>
+<li><a href="2014_11_DevOps/">Integrating Machiavelli and Nagios</a>
+
+</td></tr></table>
+<br><br><br><br>
+
+<p>A full list can be seen at: <a href="https://github.com/glasnt/talks">https://github.com/glasnt/talks</a>. Alternatively, check out my <a href="http://lanyrd.com/profile/glasnt/">lanyrd profile</a></p>
+Want me to make words with my mouth at your event? <a href="mailto:katie@glasnt.com">Throw some bytes at my SMTP server</a>
+</div>
