--- a/2015_08_Pycon_Abandonware/slides/Title.html
+++ b/2015_08_Pycon_Abandonware/slides/Title.html
@@ -2,5 +2,7 @@
 <div style="text-align: center">
 <div class="title main">Life After Death</div>
 <div class="title" style="font-size:60px">How to handle<br/>abandoned projects</div>
-<div class="author" style="margin-top: 100px">katie@glasnt.com</div>
+<div><img src="pictures/footer.svg">
+</div>
+</div>
 </section>
