--- a/2015_08_Pycon_Hatrack/slides/Title.html
+++ b/2015_08_Pycon_Hatrack/slides/Title.html
@@ -2,5 +2,5 @@
  <div style="text-align:center">
 <div class="title main" style="font-size: 100px">Build a Better<br>Hat Rack</div>
 <div class="title" style="font-size: 60px" >All Contributions Welcome</div>
-<div class="author" style="margin-top: 100px; font-size: 40px">katie@glasnt.com</div>
+<div><img src="pictures/footer.png"></div>
 </div></section>
