--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h1>Full Talks</h1>
 
 <h2>PyCon AU, Brisbane, August 2015</h2>
+<li>OpenStack MiniConf Lightning Talk: "xyz, abc, def"
 <li>Build a Better Hat Rack: All Contributions Welcome
 <li>Life After Death: How to handle abandoned projects
 
