--- a/2015_08_Pycon_Abandonware/slides/Competitor_01.html
+++ b/2015_08_Pycon_Abandonware/slides/Competitor_01.html
@@ -2,6 +2,6 @@
 <br/><br/>
 <div class="center">
 <div>'Competitor' code<br/> <br/>
-Not direct competitors, <br/>but very similar.
+&copy; Old Company 2014 <br/>
 <br/>
 </section>
