--- a/2015_08_Pycon_Abandonware/slides/TheEnd.html
+++ b/2015_08_Pycon_Abandonware/slides/TheEnd.html
@@ -1,8 +1,13 @@
 <section>
 <div>
-<br/><br/>
+<br/>
 <p align="center">
 Thanks!
+
+<br/>
+<br/>
+<img src="pictures/footer.svg">
 </p>
+
 </div>
 </section>
